# test-one

./: .gitignore  PROJECT_OVERVIEW.md  README.md  doc.md  start.sh
backend/: .dockerignore  .env.prod  .env.sample  API_DOCUMENTATION.md  CONSOLIDATION_SUMMARY.md  Dockerfile  FIXES_AND_SETUP.md  IMPLEMENTATION_PLAN.md  README.md  SERVICE_OVERVIEW.md  docker-compose.yml  main.py  pyproject.toml  rules.md  start.sh  start_backend.sh  startup.py  test_analysis.py  test_setup.py  weights.yaml
backend/cache/: small_test.b64  temp_image.b64  temp_screenshot.b64  vision_test.json  vision_test_small.json
backend/credentials/: README.md
backend/src/app/api/: analysis.py  analysis.py.backup  cloudinary.py  google_sheets.py.backup  health.py  master_analysis.py  screenshots.py  screenshots.py.backup
backend/src/app/core/: settings.py
backend/src/app/services/: ai_analysis.py  cloudinary.py  google_sheets.py  prompts.py  screenshot.py  screenshot_storage.py  weights_config.py
backend/src/app/utils/: timezone.py
frontend/: .env.sample  .npmrc  README.md  package.json  pnpm-lock.yaml  test-content-splitting.js
frontend/public/: manifest.json
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: analysis-error.tsx  analysis-progress.tsx  analysis-results.tsx  pdf-report.tsx  score-display.tsx  screenshot-gallery.tsx
frontend/src/hooks/: useAnalysis.ts
